[tool.poetry]
name = "iris-dataset"
version = "0.1.0"
description = ""
authors = ["EdgeSan <edgar.kalinovski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.6.1"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
pandas = "^2.2.0"
numpy = "^1.26.4"
pyarrow = "^15.0.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
